--- a/SchoolDiarySystem/Views/Review/CommentList.cshtml
+++ b/SchoolDiarySystem/Views/Review/CommentList.cshtml
@@ -59,7 +59,7 @@
                                     else
                                     {
                                         <h6 class="notice-title">
-                                            <a href="@Url.Action("Review", "Comment", new { id = item.CommentID })">
+                                            <a href="@Url.Action("Review", "Review", new { id = item.CommentID })">
                                                 @Html.DisplayFor(m => item.Content)
                                             </a>
                                         </h6>
