--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -114,9 +114,9 @@
                 </ul>
             </div>
         </div>
-        <!-- Header Menu Area End Here -->
+        <!-- Header Menu Area End Here style="height: 100%; width: 100%; position:fixed;" -->
         <!-- Page Area Start Here -->
-        <div class="dashboard-page-one" style="height: 100%; width: 100%; position:fixed;">
+        <div class="dashboard-page-one">
             <!-- Sidebar Area Start Here -->
             <div class="sidebar-main sidebar-menu-one sidebar-expand-md sidebar-color">
                 <div class="mobile-sidebar-header d-md-none">
