--- a/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
@@ -45,7 +45,7 @@
     <!-- Preloader Start Here -->
     @*<div id="preloader"></div>*@
     <!-- Preloader End Here -->
-    <div id="wrapper" class="wrapper bg-ash">
+    <div id="wrapper" class="wrapper bg-ash" style="display: inline;">
         <!-- Header Menu Area Start Here -->
         <div class="navbar navbar-expand-md header-menu-one bg-light">
             <div class="nav-bar-header-one">
@@ -114,9 +114,9 @@
                 </ul>
             </div>
         </div>
-        <!-- Header Menu Area End Here -->
+        <!-- Header Menu Area End Here style="height: 100%; width: 100%; position:fixed;" -->
         <!-- Page Area Start Here -->
-        <div class="dashboard-page-one" style="height: 100%; width: 100%; position:fixed;">
+        <div class="dashboard-page-one" style="height: 100%; width: 100%;">
             <!-- Sidebar Area Start Here -->
             <div class="sidebar-main sidebar-menu-one sidebar-expand-md sidebar-color">
                 <div class="mobile-sidebar-header d-md-none">
